52-gke-kustomize-bases/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ilb-service
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
  - name: tcp-port
    port: 80
    targetPort: 8080
    protocol: TCP
