52-gke-kustomize-bases/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
  - name: tcp-port
    port: 80
    targetPort: 8080
    protocol: TCP
